--- a/client/static/index.html
+++ b/client/static/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Full Stack App</title>
+<link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do" rel="stylesheet">
 <link rel="stylesheet" href="app.css">
 </head>
 <body>
